infra/kube/dev-tools/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: dev-tools
  labels:
    purpose: git
spec:
  replicas: 1
  selector:
    matchLabels:
      purpose: git
  template:
    metadata:
      labels:
        purpose: git
    spec:
      volumes:
        - name: data-gitea
          persistentVolumeClaim:
            claimName: data-gitea
      containers:
        - name: gitea
          image: gitea/gitea:1.23.7
          ports:
            - name: ssh
              containerPort: 22
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: data-gitea
              mountPath: /data
