infra/kube/dev-tools/gitea/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-lb
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.3.51
spec:
  ports:
  - port: 22
    targetPort: 22
  selector:
    purpose: git
  type: LoadBalancer
