infra/kube/dev-tools/gitea/service.yaml
apiVersion: v1
metadata:
  name: gitea-http
  namespace: dev-tools
  labels:
    purpose: git
kind: Service
spec:
  selector:
    purpose: git
  ports:
  - port: 22
    name: ssh
  - port: 3000
    name: http
