infra/kube/dev-tools/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: dev-tools
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - gitea.jbernh.xyz
    secretName: ssl-server
  rules:
  - host: gitea.jbernh.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-http
            port:
              number: 3000
